fixes, add antd button, vw/vh functions

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,5 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import './styles/index.scss';
+@import './styles/helpers/variables.scss';
+@import './components/Button/Button.scss';
+@import './components/authForm/authForm.scss';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
