--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,3 @@
-@import './styles/index.scss';
-@import './styles/helpers/variables.scss';
-@import './components/Button/Button.scss';
-@import './components/authForm/authForm.scss';
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+@import './styles/index';
+@import './pages/pages';
+@import './components/components';
