--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -6,6 +6,7 @@
 		font-weight: 500;
     border-radius: 2px;
 		height: vw(56);
+		letter-spacing: 0.1px;
 		@media screen and (max-width:1024px) {
 			height: vmin(32);
 			padding: vmin(5) vmin(45);
