--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 @import './functions/responsive';
 @import './helpers/breakpoints';
 @import './helpers/variables';
 @import '~antd/dist/antd.css';
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  padding: 0;
   font-family: 'Roboto', sans-serif, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -15,7 +21,8 @@ body {
 body,
 .App,
 #root {
-	height: 100%;
+  height: 100%;
+  color: #202002;
 }
 
 code {
