--- a/src/pages/auth/auth.scss
+++ b/src/pages/auth/auth.scss
@@ -50,3 +50,23 @@
 		opacity: 0.5;
 	}
 }
+
+
+.ant-input-affix-wrapper-focused {
+	border-color: #40a9ff;
+	border-right-width: 0 !important;
+	outline: 0;
+	box-shadow: 0 0 0 0;
+}
+
+.ant-form-item-explain {
+	text-align: left;
+	margin-top: vw(-30);
+}
+
+.ant-form-item-has-error .ant-input:focus,
+.ant-form-item-has-error .ant-input-affix-wrapper:focus,
+.ant-form-item-has-error .ant-input-focused,
+.ant-form-item-has-error .ant-input-affix-wrapper-focused {
+	box-shadow: 0 0 0 0;
+}
