--- a/src/pages/auth/auth.scss
+++ b/src/pages/auth/auth.scss
@@ -12,13 +12,20 @@
 		padding-right: vw(0);
 		display: flex;
 		justify-content: space-between;
+		flex-wrap: wrap;
 	}
 
 	&__column {
 		width: 50%;
+		@media screen and (max-width: 1024px) {
+			width: 100%;
+		}
 	}
 	&__img {
 		width: vw(744);
+		@media screen and (max-width: 1024px) {
+			width: 100%;
+		}
 	}
 	&__header {
 		max-width: vw(350);
@@ -29,6 +36,10 @@
 		font-weight: 500;
 		font-size: vw(25);
 		line-height: vw(33);
+		@media screen and (max-width: 1024px) {
+			font-size: vmin(25);
+			line-height: vmin(33);
+		}
 	}
 	.title {
 		position: relative;
@@ -39,18 +50,13 @@
 			width: vw(29);
 			height: vw(6);
 			background-color: #40a9ff;
+			@media screen and (max-width: 1024px) {
+				width: vmin(30);
+				height: vmin(4);
+			}
 		}
 	}
-	&__description {
-		font-style: normal;
-		font-weight: 300;
-		font-size: vw(18);
-		line-height: vw(21);
-		letter-spacing: 0.1px;
-		opacity: 0.5;
-	}
 }
-
 
 .ant-input-affix-wrapper-focused {
 	border-color: #40a9ff;
@@ -62,6 +68,9 @@
 .ant-form-item-explain {
 	text-align: left;
 	margin-top: vw(-30);
+	@media screen and (max-width: 1024px) {
+		font-size: vmin(14);
+	}
 }
 
 .ant-form-item-has-error .ant-input:focus,
