--- a/src/pages/auth/auth.scss
+++ b/src/pages/auth/auth.scss
@@ -68,6 +68,7 @@
 .ant-form-item-explain {
 	text-align: left;
 	margin-top: vw(-30);
+	font-size: vw(14);
 	@media screen and (max-width: 1024px) {
 		font-size: vmin(14);
 	}
