--- a/src/pages/auth/auth.scss
+++ b/src/pages/auth/auth.scss
@@ -21,6 +21,7 @@
 			width: 100%;
 		}
 	}
+	
 	&__img {
 		width: vw(744);
 		@media screen and (max-width: 1024px) {
@@ -46,7 +47,8 @@
 	&__register-link {
 		display: block;
 		text-align: center;
-		color: #ADADAD;
+		color: #adadad;
+		font-size: vw(16);
 	}
 	.title {
 		position: relative;
@@ -64,7 +66,6 @@
 		}
 	}
 }
-
 
 .ant-input-affix-wrapper-focused {
 	border-color: #40a9ff;
