--- a/src/pages/auth/auth.scss
+++ b/src/pages/auth/auth.scss
@@ -1,7 +1,10 @@
 .auth {
 	padding: vw(40) vw(90);
-	height: 100%;
+	min-height: 100%;
 	box-sizing: border-box;
+	@media screen and (max-width:1024px){
+		padding: vmin(40) vmin(90);
+	}
 	* {
 		padding: 0;
 		margin: 0;
@@ -21,7 +24,7 @@
 			width: 100%;
 		}
 	}
-	
+
 	&__img {
 		width: vw(744);
 		@media screen and (max-width: 1024px) {
@@ -49,6 +52,45 @@
 		text-align: center;
 		color: #adadad;
 		font-size: vw(16);
+	}
+
+	&__confirm {
+		padding-top: vw(70);
+		text-align: center;
+		&-icon {
+			display: inline-block;
+			width: vw(100);
+			height: vw(100);
+			@media screen and (max-width:1024px){
+				width: vmin(100);
+				height: vmin(100);
+			}
+		}
+		&-title {
+			margin: vw(10) 0;
+			font-style: normal;
+			font-weight: normal;
+			font-size: vw(22);
+			line-height: vw(25);
+			@media screen and (max-width:1024px){
+				font-size: vmin(22);
+				line-height: vmin(25);
+			}
+		}
+		&-info {
+			font-style: normal;
+			font-weight: 300;
+			font-size: vw(14);
+			line-height: vw(26);
+			text-align: center;
+			letter-spacing: 0.1px;
+			mix-blend-mode: normal;
+			opacity: 0.5;
+			@media screen and (max-width:1024px){
+				font-size: vmin(14);
+				line-height: vmin(26);
+			}
+		}
 	}
 	.title {
 		position: relative;
