--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -1,25 +1,37 @@
 @import "~styles/helpers/variables";
 .message {
 	display: flex;
+	max-width: vw(440);
+
+	margin-bottom: vw(15);
 	&__avatar {
+		display: flex;
+		flex-direction: column-reverse;
 		img {
 			border-radius: 50%;
 			max-width: vw(33);
 			max-height: vw(33);
 			margin-right: vw(13);
-			margin-bottom: vw(18);
+			margin-bottom: vw(22);
 		}
+	}
+
+	&__content {
+		display: flex;
+		flex-direction: column;
 	}
 
 	&__bubble {
 		background: $blue;
-		box-shadow: 0px 5px 5px rgba(54, 116, 255, 0.196733);
-		border-radius: 12px 12px 12px 0px;
+		box-shadow: 0px vw(5) vw(5) rgba(54, 116, 255, 0.196733);
+		border-radius: vw(12) vw(12) vw(12) 0;
 		margin-bottom: vw(8);
 		padding: vw(15);
 	}
 
 	&__text {
+		font-size: vw(14);
+		line-height: vw(20);
 		color: $white;
 		margin: 0;
 	}
@@ -30,6 +42,6 @@
 		font-size: vw(12);
 		line-height: vw(14);
 		mix-blend-mode: normal;
-		opacity: 0.4;
+		opacity: 0.5;
 	}
 }
