--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -9,6 +9,7 @@
 }
 
 body {
+  font-size: vw(16);
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif, 'Segoe UI', 'Roboto', 'Oxygen',
