add isTyping component that checks is User typing or nor

--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -99,4 +99,74 @@
 			text-align: right;
 		}
 	}
+	&__typing {
+		$ti-color-bg: #e6e7ed;
+		background-color: $ti-color-bg;
+		will-change: transform;
+		width: auto;
+		border-radius: vw(50);
+		padding: vw(5);
+		display: table;
+		margin: 0 auto;
+		position: relative;
+		-webkit-animation: 2s bulge infinite ease-out;
+		animation: 2s bulge infinite ease-out;
+		&::before,
+		&::after {
+			content: "";
+			position: absolute;
+			bottom: -2px;
+			left: -2px;
+			height: vw(10);
+			width: vw(10);
+			border-radius: 50%;
+			background-color: $ti-color-bg;
+		}
+		&::after {
+			height: vw(5);
+			width: vw(5);
+			left: vw(-5);
+			bottom: vw(-5);
+		}
+		span {
+			height: vw(10);
+			width: vw(10);
+			float: left;
+			margin: 0 1px;
+			background-color: #9e9ea1;
+			display: block;
+			border-radius: 50%;
+			opacity: 0.4;
+			@for $i from 1 through 3 {
+				&:nth-of-type(#{$i}) {
+					-webkit-animation: 1s blink infinite ($i * 0.3333s);
+					animation: 1s blink infinite ($i * 0.3333s);
+				}
+			}
+		}
+	}
+
+	@-webkit-keyframes blink {
+		50% {
+			opacity: 1;
+		}
+	}
+
+	@keyframes blink {
+		50% {
+			opacity: 1;
+		}
+	}
+
+	@-webkit-keyframes bulge {
+		50% {
+			transform: scale(1.05);
+		}
+	}
+
+	@keyframes bulge {
+		50% {
+			transform: scale(1.05);
+		}
+	}
 }
